--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -8,5 +8,28 @@
 <body>
     <h1>Salmon Tacos with Mango Salsa</h1>
     <img src="images/salmon.webp" alt="Salmon Tacos with Mango Salsa" width="500" height="500">
+
+    <h2>Description</h2>
+    <p>Grilled salmon wrapped up in a small tortilla, topped with peach-mango salsa, shredded cabbage, avocado, and a special sauce.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 mangoes, diced</li>
+        <li>2 peaches, diced</li>
+        <li>3 poblano peppers, seeded and diced</li>
+        <li>½ red onion, diced, or more to taste</li>
+        <li>½ lime, juiced, or more to taste</li>
+        <li>1 bunch cilantro, chopped, divided</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine mangoes, peaches, poblano peppers, red onion, juice of 1/2 a lime, and 1/2 the cilantro in a large bowl to make mango salsa. Cover with plastic wrap and refrigerate, at least 1 hour, preferably overnight.</li>
+        <li>Mix sour cream, mayonnaise, ketchup, cayenne pepper, salt, and black pepper in a small bowl to make special sauce.</li>
+        <li>Preheat oven to 350 degrees F (175 degrees C). Arrange tortillas on a baking sheet.</li>
+        <li>Preheat a grill pan over medium-high heat; coat with cooking spray. Cook salmon until easily flaked with a fork, about 4 minutes per side. Transfer to a plate and flake into smaller pieces with a fork.</li>
+        <li>Heat tortillas in the preheated oven until warmed through, about 5 minutes.</li>
+        <li>Divide salmon among tortillas. Top with mango salsa, special sauce, shredded cabbage, avocados, and remaining cilantro. Wrap up tacos and serve lime wedges alongside.</li>
+    </ol>
 </body>
 </html>
